 MiscUtilities.findEntity(String systemId, String test, Class where)
 MiscUtilities.charsToEntities(String str)
 MiscUtilities.stringsEqual(String s1, String s2)
 MiscUtilities.objectsEqual(Object o1, Object o2)
 MiscUtilities.KB_FORMAT
 MiscUtilities.MB_FORMAT
 MiscUtilities.formatFileSize(long length)
 SegmentCharSequence.SegmentCharSequence(Segment seg, boolean reverse)
 PluginJar.getActions()
 Registers.StringRegister
 jEdit.getActionSetForAction(EditAction action)
 jEdit.getActions()
 jEdit.openFile(View view, String parent, String path, boolean readOnly, boolean newFile)
 jEdit.openFile(View view, String parent, String path, boolean readOnly, boolean newFile, Hashtable props)
 jEdit.createTextArea()
 VFS.VFS(String name)
 VFSManager.getVFSByName(String name)
 VFSManager.registerVFS(String protocol, VFS vfs)
 VFSManager.error(final Component comp, final String error, final Object[] args)
 VFSManager.getFilesystems()
 (Matthieu Casanova)

}}}
{{{ Editing

-Applied patch from Matthew Gilbert to add ability to increase/decrease line spacing in the text area. (#3023134, Dale Anson)

-Added jflex edit mode (Matthieu Casanova)

-Added "using" keyword to haXe edit mode (patch #3081482 from Bad Sector, Matthieu Casanova)

-Updated erlang mode and associated *.hrl to erlang language (patch #3042398 from jclopes , Matthieu Casanova)
}}}
{{{ UI
- Updated ColorWellButton to use the dialog provided by JColorChooser rather than creating its own dialog since the JColorChooser dialog is much richer. (Dale Anson)

}}}
{{{ Miscellaneous
-Added a new menu item "New Macro" in Macros menu (patch #2983607 from Damien Radtke, Matthieu Casanova)

-In search and replace when replacing by a beanshell snippet, it is now possible to use multiple statements instead of
 only one statement. To do that, enclose your code in braces (patch #3002207 from cy6erGn0m, Matthieu Casanova)
}}}
}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: